# infineon-demo

./: README.md
demo/: Cargo.toml  memory.x
demo/.cargo/: config.toml
demo/src/: main.rs
psoc6-02-pac/: Cargo.toml  device.x  psoc6_02.svd
psoc6-02-pac/src/: backup.rs  cpuss.rs  crypto.rs  csd0.rs  dmac.rs  dw0.rs  efuse.rs  fault.rs  flashc.rs  gpio.rs  hsiom.rs  i2s0.rs  ipc.rs  lcd0.rs  lib.rs  lpcomp.rs  pass.rs  pdm0.rs  peri.rs  peri_ms.rs  profile.rs  prot.rs  sar.rs  scb0.rs  sdhc0.rs  smartio.rs  smif0.rs  srss.rs  tcpwm0.rs  usbfs0.rs
psoc6-02-pac/src/backup/: alm1_date.rs  alm1_time.rs  alm2_date.rs  alm2_time.rs  breg.rs  cal_ctl.rs  ctl.rs  intr.rs  intr_mask.rs  intr_masked.rs  intr_set.rs  osccnt.rs  pmic_ctl.rs  reset.rs  rtc_date.rs  rtc_rw.rs  rtc_time.rs  status.rs  ticks.rs  trim.rs
psoc6-02-pac/src/cpuss/: ap_ctl.rs  buff_ctl.rs  cal_sup_clr.rs  cal_sup_set.rs  cm0_clock_ctl.rs  cm0_ctl.rs  cm0_int0_status.rs  cm0_int1_status.rs  cm0_int2_status.rs  cm0_int3_status.rs  cm0_int4_status.rs  cm0_int5_status.rs  cm0_int6_status.rs  cm0_int7_status.rs  cm0_nmi_ctl.rs  cm0_pc0_handler.rs  cm0_pc1_handler.rs  cm0_pc2_handler.rs  cm0_pc3_handler.rs  cm0_pc_ctl.rs  cm0_status.rs  cm0_system_int_ctl.rs  cm0_vector_table_base.rs  cm4_clock_ctl.rs  cm4_ctl.rs  cm4_int0_status.rs  cm4_int1_status.rs  cm4_int2_status.rs  cm4_int3_status.rs  cm4_int4_status.rs  cm4_int5_status.rs  cm4_int6_status.rs  cm4_int7_status.rs  cm4_nmi_ctl.rs  cm4_pwr_ctl.rs  cm4_pwr_delay_ctl.rs  cm4_status.rs  cm4_system_int_ctl.rs  cm4_vector_table_base.rs  dp_status.rs  (+21 more)
(+917 files in other folders)
